fixed text overlapping bug in object symbol column on strain report annotation tables

--- a/src/main/webapp/css/treport.css
+++ b/src/main/webapp/css/treport.css
@@ -1,10 +1,15 @@
 /* used by HTMLTableReportStrategy and FixedPriceSecurityReportStrategy */
 
+tr td:first-child {
+    min-width: 108px;
+}
+
 tr.evenRow td, tr.evenRow td a {
     background-color: #ffffff;
     color: black;
     font-size: 12px;
     font-family: arial;
+    overflow:auto;
 }
 
 tr.oddRow td, tr.oddRow td a {
@@ -12,6 +17,7 @@ tr.oddRow td, tr.oddRow td a {
     color: black;
     font-size: 12px;
     font-family: arial;
+    overflow:auto;
 }
 
 tr.headerRow td {
